@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-09-23 Mon 15:16 -->
+<!-- 2024-09-25 Wed 12:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-09-23 15:06:46</i></td>
+<td class="org-left"><i>2024-09-25 12:53:37</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-09-23 15:16:04</i></td>
+<td class="org-left"><i>2024-09-25 12:53:38</i></td>
 </tr>
 </tbody>
 </table>
@@ -307,7 +307,8 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 <ul class="org-ul">
 <li>New
 <ul class="org-ul">
-<li>N/A</li>
+<li>examples/phoenix.cpp</li>
+<li>examples/phoenixM.cpp</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
